--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Base</title>
 </head>
 <body>
-    <h1>New Branch i am eating</h1>
-    <button>Click</button>
+    <h1>Дайте поспать пж</h1>
+    <button>нет</button>
 </body>
 </html>
